Fix detail page style on narrow widths
It wasn't possible to click the X

--- a/app/assets/stylesheets/details.sass
+++ b/app/assets/stylesheets/details.sass
@@ -127,3 +127,14 @@
 .details-window.show-controls
   .control, .controls
     :opacity 1
+
+@media (max-width: 750px)
+  .control.home
+    :display none
+
+  .tag-link
+    :display none
+
+  .details-window .control
+    :padding 12px
+
